# WebScraping

./: .env  .env_example  functions.py  logger.py  main.py  pyproject.toml  something.html  something1.html  test.py
aiobot/: __init__.py  bot.py  commands.py  dispatcher.py
aiobot/scrap_funcs/: functions.py
